certification: update languages for LPIC-2

--- a/content/certification.html
+++ b/content/certification.html
@@ -72,7 +72,7 @@ certs = events.select{|e| e[:type] == 'certification'}.sort_by{|e| e[:start_date
       <td><a href="https://www.lpi.org/our-certifications/lpic-2-overview">LPIC-2</a></td>
       <td>201, 202</td>
       <td>&euro; 90.00</td>
-      <td>English, French, German</td>
+      <td>English, German</td>
     </tr>
     <tr>
       <td><a href="https://www.lpi.org/our-certifications/lpic-3-300-overview">LPIC-3</a></td>
