stands: Initial list

--- a/content/stands.html
+++ b/content/stands.html
@@ -5,73 +5,73 @@
 title: Stands
 stands:
 # All [in random order] (61):
-  AW (7):
-   - coreboot: http://www.coreboot.org/
-   - GNU GRUB: http://www.gnu.org/software/grub/
-   - Open Source Hardware: https://www.olimex.com/Products/DIY%20Laptop/
-   - Automotive Grade Linux: https://www.automotivelinux.org/
+  AW (8):
+   - MicroPython: https://micropython.org/
+   - RIOT: https://github.com/RIOT-OS/RIOT
+   - Turris Omnia: https://omnia.turris.cz/
+   - Pine64 ARMv8 Devices: https://www.pine64.org/
    - Ham radio: http://uba.be/
-   - CorteXlab: http://www.cortexlab.fr/
-   - OpenEmbedded (2): http://www.openembedded.org/
-  H (7):
-   - Godot Engine: https://godotengine.org/
+   - Automotive Grade Linux: https://www.automotivelinux.org/
+   - OpenEmbedded: http://www.openembedded.org/
+   - EOMA68: https://elinux.org/Embedded_Open_Modular_Architecture/EOMA68
+  H (8):
+   - Grafana, Graphite and Prometheus: https://grafana.com/grafana
+   - Percona: https://github.com/percona
+   - OWASP: https://www.owasp.org/
    - Software Freedom Conservancy: http://sfconservancy.org/
-   - BBC Open Source: http://www.bbc.co.uk/opensource/
-   - Python: http://www.python-fosdem.org/
    - WolfSSL: https://www.wolfssl.com/
    - GrimoireLab: http://grimoirelab.github.io/
-   - MySQL: http://www.mysql.com/
+   - privacyIDEA: https://privacyidea.org/
    - O'Reilly Media: http://www.oreilly.com/
   K [level 1, group A] (11):
    - KDE: http://www.kde.org/
    - GNOME: http://gnome.org/
    - LibreOffice: http://www.libreoffice.org/
-   - Kopano: https://kopano.io/
-   - CiviCRM: https://civicrm.org/
-   - GNU Taler / p&equiv;p foundation: https://taler.net/
+   - Open Source Initiative: https://opensource.org/
+   - Nextcloud: https://nextcloud.com/
+   - Gentoo: https://www.gentoo.org/
    - FreeBSD Project: https://www.freebsd.org/
    - illumos: http://wiki.illumos.org/display/illumos/illumos+Home
-   - OpenSUSE: https://www.opensuse.org/
+   - openSUSE: https://www.opensuse.org/
    - CentOS: https://www.centos.org/
    - Fedora Project: http://getfedora.org/
-  K [level 1, group B] (8):
+  K [level 1, group B] (6):
+   - Python: http://www.python-fosdem.org/
    - ReactOS / Haiku: https://www.reactos.org/
-   - Gentoo: https://www.gentoo.org/
-   - CoreOS Linux: https://coreos.com/
+#  - Haiku: https://www.haiku-os.org/
+   - Qubes OS: https://qubes-os.org/
    - Debian: https://www.debian.org/
-   - PostgreSQL: https://www.postgresql.org/
-   - Nextcloud: https://nextcloud.com/
    - Bazel: https://bazel.build/
-   - Open Build Service / OpenQA: http://openbuildservice.org/
+   - GRUB: http://www.gnu.org/software/grub/
   K [level 1, group C] (9):
    - Free Software Foundation Europe (FSFE) (2): https://fsfe.org/
-   - Vikings: https://www.vikings.net/
-   - Tor Project, Tails Project, Frënn vun der Ënn, Nos oignons: https://www.torproject.org/
+   - Vikings - Libre Hosting: https://www.vikings.net/
+   - Tor Project, Nos oignons, SecureDrop: https://www.torproject.org/
    - Xen Project: http://xenproject.org/
    - OpenStack: https://www.openstack.org/
    - oVirt / Foreman: http://www.ovirt.org/
-   - Gluster
-   - ownCloud: https://owncloud.org/
-   - CAcert / secure-u: http://www.cacert.org/
+   - Gluster/Ceph: https://www.gluster.org/
+   - LizardFS: https://github.com/lizardfs/lizardfs
+   - Open Source Design: https://github.com/opensourcedesign
   K [level 2] (19):
+   - OW2 Open Source Community: http://www.ow2.org/
+   - Kopano: https://kopano.io/
    - Mozilla: http://www.mozilla.org/
-   - diaspora*: https://diasporafoundation.org/
-   - Apache Software Foundation: http://www.apache.org/
-   - OW2: http://www.ow2.org/
-   - Jenkins: https://jenkins.io
+   - The Apache Software Foundation: http://www.apache.org/
    - Wikis and CMS: https://tiki.org/
-   - OpenNMS: http://www.opennms.org/
-   - Kolab, Kube and Roundcube (replaces Suricata IDS): http://www.kolab.org/
-   - Turris Omnia: https://omnia.turris.cz/
-   - Open Smart Grid Platform: http://opensmartgridplatform.org/
+   - CiviCRM: https://civicrm.org/
+   - Eclipse Foundation: https://eclipse.org/
+   - Jenkins: https://jenkins.io/
+   - coala and GitMate: http://coala.io/
+   - Nim: https://nim-lang.org/
    - Perl Programming Language (2): http://www.perl.org/
-   - Coala: http://coala.io/
-   - Linux From Scratch: http://www.linuxfromscratch.org/
-   - Google Code-in, GSoC: https://developers.google.com/open-source/gsoc/
-   - Ultimaker
-   - SOFA: https://www.sofa-framework.org/
+   - PostgreSQL: https://www.postgresql.org/
+   - Free Linux Foundation Training: https://training.linuxfoundation.org/free-linux-training/
+   - Google Summer of Code, GCI: https://g.co/gsoc
+   - Godot Engine: https://godotengine.org/
    - MuseScore: https://musescore.org/
-   - Matrix: https://matrix.org/
+   - VideoLAN: https://videolan.org/
+   - 0 A.D.: https://play0ad.com/
    - The Realtime Lounge (2): http://xmpp.org/
 ---
 <%
@@ -129,12 +129,12 @@ give away goodies and so forth, and to present themselves to the visitors
 in a more personal fashion.
 </p>
 <p>
-The following stands will be present at FOSDEM 2017.
+The following stands will be present at FOSDEM 2018.
 <%
 =begin
 %>
 <span class="label label-info">
-The list of accepted stands for FOSDEM 2017 has not yet been published!
+The list of accepted stands for FOSDEM 2018 has not yet been published!
 </span>
 </p>
 <p>
