stands: OS design URL and Libre Space Foundation

--- a/content/stands.html
+++ b/content/stands.html
@@ -10,7 +10,7 @@ stands:
    - RIOT: https://github.com/RIOT-OS/RIOT
    - Turris Omnia: https://omnia.turris.cz/
    - Pine64 ARMv8 Devices: https://www.pine64.org/
-   - Ham radio: http://uba.be/
+   - Ham radio and Libre Space Foundation: http://uba.be/
    - Automotive Grade Linux: https://www.automotivelinux.org/
    - OpenEmbedded: http://www.openembedded.org/
    - EOMA68: https://elinux.org/Embedded_Open_Modular_Architecture/EOMA68
@@ -52,7 +52,7 @@ stands:
    - oVirt / Foreman: http://www.ovirt.org/
    - Gluster/Ceph: https://www.gluster.org/
    - LizardFS: https://github.com/lizardfs/lizardfs
-   - Open Source Design: https://github.com/opensourcedesign
+   - Open Source Design: http://opensourcedesign.net/
   K [level 2] (19):
    - OW2 Open Source Community: http://www.ow2.org/
    - Kopano: https://kopano.io/
