--- a/content/certification.html
+++ b/content/certification.html
@@ -118,60 +118,9 @@ certs = events.select{|e| e[:type] == 'certification'}.sort_by{|e| e[:start_date
 <hr/>
 
 <a name="bsdcg"></a>
-<img src="asset:bsdcg-logo" alt=""
-  style="float:right; margin-left: 1em; margin-right: 1em;"/>
 <h2>BSD Associate certification</h2>
 <p>
-  The BSD Certification Group (BSDCG) will offer the BSDA certification exam
-  to attendees of <%= conference()[:title] %>.
-  One exam session will be offered.
-</p>
-
-<p>
-  Exam candidates should be proficient in the BSDA Certification Requirements
-  and the Command Reference, both of which are available for free download from
-  the
-  <a href="http://www.bsdcertification.org/certification/certification/bsd-associate">
-  certification page of the BSDCG website</a>.
-</p>
-
-<p>
-  The following exam is offered.
-  The exam will be paper based and in English.
-</p>
-
-<table class="table table-striped table-bordered table-condensed">
-  <thead>
-    <tr>
-      <th>Certification</th>
-      <th>Price</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>
-        <a href="http://www.bsdcertification.org/certification/certification/bsd-associate">BSD Associate</a>
-      </td>
-      <td>$ 75.00</td>
-    </tr>
-  </tbody>
-</table>
-
-<h3>Registration procedure</h3>
-<p>
-  Participants have to register for a BSDCG ID at
-  <a href="https://register.bsdcertification.org/step-1-get-a-bsdcg-id">
-  https://register.bsdcertification.org/register/get-a-bsdcg-id</a>.
-  Note that it may take up to 24 hours to receive a BSDCG ID.
-  Once you have an ID, you can choose an exam location and pay for the exam from
-  the same website.
-  Prices are $75 USD and payable through PayPal or credit card.
-</p>
-
-<p>
-  Exam candidates must bring valid photo identification matching the name they
-  used when they registered for their BSDCG ID.
-  Due to limited seating at the event, exam pre-registration is recommended.
+  More information will be made available in the coming days and weeks.
 </p>
 
 <hr/>
