stands: there's two languages in the Perl family

--- a/content/stands.html
+++ b/content/stands.html
@@ -64,7 +64,7 @@ stands:
    - Jenkins: https://jenkins.io/
    - coala and GitMate: http://coala.io/
    - Nim: https://nim-lang.org/
-   - Perl Programming Language (2): http://www.perl.org/
+   - Perl Programming Languages (2): http://www.perl.org/
    - PostgreSQL: https://www.postgresql.org/
    - Free Linux Foundation Training: https://training.linuxfoundation.org/free-linux-training/
    - Google Summer of Code, GCI: https://g.co/gsoc
