stands: Add ownCloud

--- a/content/stands.html
+++ b/content/stands.html
@@ -35,13 +35,14 @@ stands:
    - openSUSE: https://www.opensuse.org/
    - CentOS: https://www.centos.org/
    - Fedora Project: http://getfedora.org/
-  K [level 1, group B] (6):
+  K [level 1, group B] (8):
    - Python: http://www.python-fosdem.org/
+   - Haiku: https://www.haiku-os.org/
    - ReactOS / Haiku: https://www.reactos.org/
-#  - Haiku: https://www.haiku-os.org/
    - Qubes OS: https://qubes-os.org/
    - Debian: https://www.debian.org/
    - Bazel: https://bazel.build/
+   - ownCloud: https://owncloud.org/
    - GRUB: http://www.gnu.org/software/grub/
   K [level 1, group C] (9):
    - Free Software Foundation Europe (FSFE) (2): https://fsfe.org/
