stands: separate haiku/reactos

--- a/content/stands.html
+++ b/content/stands.html
@@ -38,7 +38,7 @@ stands:
   K [level 1, group B] (8):
    - Python: http://www.python-fosdem.org/
    - Haiku: https://www.haiku-os.org/
-   - ReactOS / Haiku: https://www.reactos.org/
+   - ReactOS: https://www.reactos.org/
    - Qubes OS: https://qubes-os.org/
    - Debian: https://www.debian.org/
    - Bazel: https://bazel.build/
