--- a/content/schedule/devrooms/open_source_design.html
+++ b/content/schedule/devrooms/open_source_design.html
@@ -6,4 +6,7 @@ that term typography, graphic design, interaction design, user
 experience, human-computer interaction, accessibility, information
 architecture, content strategy, service design, design research and
 &lt;add your favourite buzzword here&gt;. We hope to see you there.
+
+[Join the OpenSourceDesign community!](http://opensourcedesign.net)
+  
 </p>
