tracks: add workshop

--- a/content/schedule/tracks.html
+++ b/content/schedule/tracks.html
@@ -8,6 +8,7 @@ categories = [
     {type: "lightningtalk"},
     {type: "certification"},
     {type: "bof"},
+    {type: "workshop"},
     {heading: "Main tracks", type: "maintrack"},
     {heading: "Developer rooms", type: "devroom"},
 ]
