fixing beerevent page

--- a/content/beerevent.html
+++ b/content/beerevent.html
@@ -33,20 +33,18 @@ opportunity to taste some of the finest
 
 <p>
   For efficiency reasons, the available beers are limited to:
-  <ul>
-    <li>Campus</li>
-    <li>Delirium Tremens, Red and Nocturnum</li>
-    <li>La Guillotine</li>
-    <li>Floris White</li>
-    <li>Floris Cactus</li>
-    <li>Chimay Triple</li>
-    <li>Jack IPA</li>
-    <li>Rader ambree</li>
-    <li>Chouffe IPA</li>
-    <li>Rulles Blonde</li>
-    <li>St Feuillien Belgian Coast IPA</li>
-    <li>Straffe Hendrix Quad</li>
-  </ul>
+</p>
+<p>
+  Campus, Delirium Tremens, Red and Nocturnum, La Guillotine,
+  Floris White,
+  Floris Cactus,
+  Chimay Triple,
+  Jack IPA,
+  Rader ambree,
+  Chouffe IPA,
+  Rulles Blonde,
+  St Feuillien Belgian Coast IPA,
+  Straffe Hendrix Quad
 </p>
 
 <h2>Virtual Beer Distribution Algorithm v3.3 (stable)</h2>
