donate: add online payment link

--- a/content/support/donate.html
+++ b/content/support/donate.html
@@ -14,13 +14,22 @@ navtitle: Donate
 
 <h2>How?</h2>
 <p>
-  We accept donations by wire transfer only.
+  We accept donations by wire transfer, credit card, bancontact, iDEAL and Bitcoin.<br />
+  We can send you a receipt if you need one. Send us an email at
+  <a href="mailto:info@fosdem.org">info@fosdem.org</a>.
+</p>
 
+<h3>Wire transfer</h3>
+<p>
   <ul>
     <li><b>IBAN:</b> BE50 0016 8930 5318</li>
     <li><b>BIC:</b> GEBABEBB</li>
   </ul>
+</p>
 
-  We can send you a receipt if you need one. Send us an email at
-  <a href="mailto:info@fosdem.org">info@fosdem.org</a>.
+<h3>Credit card, Bancontact, iDEAL and Bitcoin</h3>
+<p>
+  Click on the payment link and enter the desired amount. You will be able to select
+  your payment method in the next step:
+  <a href="https://useplink.com/payment/q7eMCJNcQcqTTKVqeMJj">https://useplink.com/payment/q7eMCJNcQcqTTKVqeMJj</a>
 </p>
