donate: somewhat prettify the paragraph

--- a/content/support/donate.html
+++ b/content/support/donate.html
@@ -14,7 +14,7 @@ navtitle: Donate
 
 <h2>How?</h2>
 <p>
-  We accept donations by wire transfer, credit card, bancontact, iDEAL and Bitcoin.<br />
+  We accept donations by wire transfer, credit card, bancontact, iDEAL and Bitcoin.
   We can send you a receipt if you need one. Send us an email at
   <a href="mailto:info@fosdem.org">info@fosdem.org</a>.
 </p>
@@ -29,7 +29,10 @@ navtitle: Donate
 
 <h3>Credit card, Bancontact, iDEAL and Bitcoin</h3>
 <p>
-  Click on the payment link and enter the desired amount. You will be able to select
-  your payment method in the next step:
-  <a href="https://useplink.com/payment/q7eMCJNcQcqTTKVqeMJj">https://useplink.com/payment/q7eMCJNcQcqTTKVqeMJj</a>
+  Clicking on the "Donate!" button will take you to our payment provider. Enter the
+  amount you wish to donate and click "Start payment".  You will be able to select
+  your payment method in the next step.
+</p>
+<p>
+  <a class="btn-purple" href="https://useplink.com/payment/q7eMCJNcQcqTTKVqeMJj">Donate!</a>
 </p>
