maps: Update campus map with extra parking area

--- a/content/index.html
+++ b/content/index.html
@@ -74,7 +74,7 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
     <p>FOSDEM takes place at the ULB Solbosch Campus, <strong>Brussels, Belgium</strong>, Europe, Earth.</p>
     <div class="location-info">
       <div class="map">
-        <img style="float: right; text-align: right" src="asset:campusmap" alt="ULB Solbosch Campus map: Location of FOSDEM" title="ULB Solbosch Campus map: Location of FOSDEM"}/>
+        <img style="float: right; text-align: right" src="asset:campusmap_parking" alt="ULB Solbosch Campus map: Location of FOSDEM" title="ULB Solbosch Campus map: Location of FOSDEM"}/>
       </div>
       <div class="location-text">
         <a class="logo-ulb-big" href="#">Université libre de bruxelles</a>
