transportation: Better map for the extra parking; update transportation page

--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -5,7 +5,7 @@ sponsors_under_navigation: true
 ---
 <p>FOSDEM will take place at the ULB Solbosch Campus, <strong>Brussels, Belgium</strong>, Europe, Earth.</p>
 
-<img style="float: right; text-align: right" src="asset:campusmap" alt="ULB Solbosch Campus map: Location of FOSDEM" title="ULB Solbosch Campus map: Location of FOSDEM"}/>
+<img style="float: right; text-align: right" src="asset:campusmap_parking" alt="ULB Solbosch Campus map: Location of FOSDEM" title="ULB Solbosch Campus map: Location of FOSDEM"}/>
 
 <div class="location-text">
   <a class="logo-ulb-big" href="#">Université libre de bruxelles</a>
@@ -124,18 +124,23 @@ bars in the neighbourhood where you can pass the time!</p>
 <a name="parking"></a><h3>By car: parking</h3>
 <p>
 If you come to FOSDEM by car, you can park your car on the campus.
-The parking is located between Janson and the K building. 
+The main parking is located between Janson and the K building.
 See the map on this page for the exact location.
 The entrance to the parking is on Av. Franklin Roosevelt next to the H building.
-Note: There is <strong>no entrance</strong> nor exit on Av. Adolphe Buyl.
+Note: There is <strong>no entrance</strong> from Av. Adolphe Buyl.
 </p>
 <p>
-You can park here at your own risk.
+An <strong>additional parking</strong> is available next to the U
+building at Av. Antoine Depage. Note that this is a one-way street,
+only accessible from Av. Franklin Roosevelt as well.
+</p>
+<p>
+You can park on the campus at your own risk.
 Do not leave any valuables in your car!
 </p>
 
 <p>
-The parking of the campus can be very busy since early morning
+The parkings of the campus can be very busy since early morning
 during both days. An alternative is to leave your car in the
 <a href="http://www.interparking.be/find-parking/Sablon-Poelaert/n-Poelaert/">
 Parking Sablon-Poelaert</a>, from there to take the
