transportation: update map links

--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -198,8 +198,7 @@ on the map.
 <hr />
 <h2>Maps</h2>
 <ul>
-<li><a href="http://www.stib.be/netplan-plan-reseau.html?l=en">Map of the Metro/Tram/Bus Network in Brussels</a></li>
+<li><a href="http://www.stib-mivb.be/irj/go/km/docs/resource/Dynmaplan/index.html#en">Map of the Metro/Tram/Bus Network in Brussels</a></li>
 <li><a href="http://upload.wikimedia.org/wikipedia/commons/8/85/Metro_Brussels.svg">Map of Metro stations in Brussels (SVG)</a></li>
-<li><a href="http://homepage.univie.ac.at/horst.prillinger/metro/m/brussel.html">Map of Tram Network in Brussels</a></li>
 </ul>
 
