about: update team list

--- a/content/about.html
+++ b/content/about.html
@@ -103,7 +103,9 @@ navtitle: About
     <small>in alphabetical order</small>
     <ul>
       <li>Nevelina Aleksandrova</li>
+      <li>Niels Ballis</li>
       <li>Gerry Demaret</li>
+      <li>Pieter De Praetere</li>
       <li>Michael De Swert</li>
       <li>Philippe De Swert</li>
       <li>Egbert De Vries</li>
@@ -114,6 +116,7 @@ navtitle: About
       <li>Vasil Kolev</li>
       <li>Daniele Lacamera</li>
       <li>Koert Loret</li>
+      <li>Maria Markova</li>
       <li>Jan-Frederik Martens</li>
       <li>Marthe Parada Delgado</li>
       <li>Juan Rial</li>
@@ -122,6 +125,7 @@ navtitle: About
       <li>Jonas Scheers</li>
       <li>Johan van Selst</li>
       <li>Wouter Simons</li>
+      <li>Ieva Supjeva</li>
       <li>Emanuil Tolev</li>
       <li>Mark Van den Borre</li>
       <li>Wouter Verhelst</li>
