Correct spelling mistakes.

--- a/content/certification.html
+++ b/content/certification.html
@@ -137,7 +137,7 @@ certs = events.select{|e| e[:type] == 'certification'}.sort_by{|e| e[:start_date
 <p>
   Individuals willing to be certified must be already active in the field of
   migrations from proprietary software and large deployments of LibreOffice,
-  and/or LibreOffice training programs of any kind (withing a migration or a
+  and/or LibreOffice training programs of any kind (within a migration or a
   large deployment, or a training school).  More information is available on the
   <a href="https://www.documentfoundation.org/certification/program/">certification page
     of The Document Foundation website</a>.
