--- a/content/keysigning.html
+++ b/content/keysigning.html
@@ -77,7 +77,7 @@ gpg --keyserver ksp.fosdem.org --send-key [keyid]
 <p>
   If you are participating in the keysigning event (i.e.: you have submitted
   your key to the keyserver), you should download the final list of
-  participants and follow its instructions closely. Said instructions are at the  begining of the file. 
+  participants and follow its instructions closely. Said instructions are at the  beginning of the file. 
 </p>
 
 <p>
