schedule/mobile: add Sojourner web app

--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -49,6 +49,10 @@ Ways to have the schedule with you at all times, without wasting trees:
 <li><b>Generic mobile web interface</b><br />
     <a href="https://programm.froscon.de/fosdem/">Mobile web schedule</a> thanks to our friends at Froscon.<br />
 </li>
+<li><b>Sojourner web interface</b><br />
+    <a href="https://github.com/loomchild/sojourner-web">Source code</a>,<br />
+    <a href="https://sojourner.loomchild.net/">Sojourner web app</a><br />
+</li>
 </ul>
 
 <p>
