update accessibility; include nav.fosdem.org

--- a/content/practical/accessibility.html
+++ b/content/practical/accessibility.html
@@ -25,18 +25,16 @@ speaker are available in the following rooms:</p>
  <li>K.1.105 (La Fontaine)</li>
 </ul>
 
+<p>People with auditory needs might want to know that for FOSDEM 2018, we are also running an experiment with closed captioning of a limited subset of video recordings. These captioned videos will be made available in the weeks after the event.</p>
+
+<h3>Wheelchair and limited mobility needs</h3>
+
+<p><a href="https://nav.fosdem.org">Nav.fosdem.org</a> is our on campus route planner. It has an option for avoiding stairs. All routes calculated this way should be wheelchair and limited mobility accessible. Rooms with no limited mobility access are AW1121 and 1W1125.</p>
+
 <h3>Accessibility contact</h3>
 <p>
-  All staff and volunteers should be able to help you find accessible routes
-  around the campus.
-</p>
-<p>
-  Mark van den Borre is particularly familiar with the campus.
-  You can contact him directly during the event by email (<a
-  href="mailto:mvandenborre@fosdem.org">mvandenborre@fosdem.org</a>) or phone
-  (+32 486 961 726).
-  You can also ask any volunteer or staff member to radio him.
+All staff and volunteers should be able to help you find accessible routes around the campus.
 </p>
 
-We welcome any suggestions to further improve the accessibility of FOSDEM.
-Please contact Mark if you have any suggestions or concerns.
+<h3>Suggestions welcome</h3>
+<p>We welcome your ideas for improving accessibility at FOSDEM. Please email them to <a href="mailto:feedback@fosdem.org">feedback@fosdem.org</a>.</p>
