--- a/content/schedule.html
+++ b/content/schedule.html
@@ -57,7 +57,7 @@ certs = events.select{|e| e[:type] == 'certification'}.sort_by{|e| e[:start_date
   Recent editions featured 400+ speakers, 500+ events and a wealth of tracks.
 <% end %>
   We do our best to provide you with as much information and navigation options
-  about the schedule as we can.
+  about the schedule as we can. Check out our <a href="https://nav.fosdem.org">on-campus navigation tool</a>.
 </p>
 
 <p>
