list all inaccessible rooms

--- a/content/practical/accessibility.html
+++ b/content/practical/accessibility.html
@@ -29,7 +29,15 @@ speaker are available in the following rooms:</p>
 
 <h3>Wheelchair and limited mobility needs</h3>
 
-<p><a href="https://nav.fosdem.org">Nav.fosdem.org</a> is our on campus route planner. It has an option for avoiding stairs. All routes calculated this way should be wheelchair and limited mobility accessible. Rooms with no limited mobility access are AW1121 and 1W1125.</p>
+<p><a href="https://nav.fosdem.org">Nav.fosdem.org</a> is our on campus route planner. It has an option for avoiding stairs. All routes calculated this way should be wheelchair and limited mobility accessible. Rooms with no limited mobility access are:</p>
+
+<ul>
+ <li>AW1121</li>
+ <li>AW1125</li>
+ <li>UA2.220 Guillissen</li>
+ <li>UA2.118 Henriot</li>
+ <li>UA2.114 Baudoux</li>
+</ul>
 
 <h3>Accessibility contact</h3>
 <p>
