fix red cross location, add nav.fosdem.org link

--- a/content/practical/services.html
+++ b/content/practical/services.html
@@ -19,7 +19,7 @@ We're happy to assist you at one of the Infodesks.</p>
 damage from any cause whatsoever of items left at the cloak room.</p>
 
 <a name="firstaid"></a><h2>First aid</h2>
-<p>A Red Cross first aid team is present during the entire weekend. Follow the signs in the H building.</p>
+<p>A Red Cross first aid team is present during the entire weekend. Get there using the <a href="https://nav.fosdem.org/l/red_cross/">on-campus interactive map</a> or follow the signs in the K building.</p>
 
 <a name="security"></a><h2>Physical security</h2>
 <p>The goal of FOSDEM is to organise an event where everyone can feel safe and
