--- a/content/sightseeing.html
+++ b/content/sightseeing.html
@@ -18,11 +18,50 @@ aliases: /sightseeing
 
 <p>
   The <em>free tours</em> will take place on both days during the conference.
-  Each tour will give you a view of a different part of the city, and the tours
+  Each tour will give you a view of a different side of the city, and the tours
   offered this year will be different from those offered in previous years.
-  The meeting point is at the infodesk in the H building, and the tours end there as well.
+</p>
+  
+<p>
+  The meeting point is next to the infodesk in front of the H building, and the tours end here as well.
+  For both tours, Saturday and Sunday you have to register in front providing phonenumber and e-mail.
+  Send an e-mail to Tours@FOSDEM.org providing name, e-mail and phonenumber and await a confirmation.
+  We need this information for emergencies and won't use it or store it for any other purpose.
+  It will be deleted after Fosdem ends.
 </p>
 
+<p> 
+  Come to H-Building ON TIME. If you are to late we sadly can't wait for you!
+  We gather in front of H-building next to the infodesk from 13:30 for both tours.
+  We leave no later then 13:45 to the Busstop which will take you all to the city centre. (Carréfour de l'Europe)
+</p>
+
+<P>
+  From there the tourguide (Saturday: Adeline / Sunday: Adrian) will take you on a discovery tour through Brussels.
+</p>
+
+<p>
+  <b>The Saturday tour</b> will be the popular tour of the beautifull city centre of Brussels.
+  The guide will show you the main sights of Brussels. By foot, we will introduce you to the most important monuments 
+  and we will give you a great overview of the city in just 3 hours, including: 
+  • Grand Place • Town Hall • Maison du Roi • Comic art scene • The Stock Exchange • Galeries Saint Hubert 
+  • Manneken Pis • The Monnaie Opera • St Nicolas’ Church • River Senne • The Royal Square 
+  • Mont des Arts The tour usually ends close to the Cathedral.
+  After which we will walk back to the Busstop (Carréfour de l'Europe) where we'll travel back to the ULB.
+  We expect to arrive back at ULB around 18:10
+</p>
+
+<p>
+  <b>The Sunday tour</b> starts at the same time as Saturday and will end at 17:00 after which we will travel back to the ULB.
+  Here we will arrive approximately around 17:40.
+  This is called the alternative tour which means we will show you Brussels from another side. 
+  Brussels Alternative tour means discovering a part of the City where Art represents the people and locals battle against gentrification. 
+  This 2,5 hour tour includes: 
+  • Gentrification and the Moralles area • The LGBT District • Locals’ artistic remembrance of terror attacks 
+  • Street art and Murals • The famous comic book route  Europe’s second largest pedestrian zone 
+  • Belgiums `NO’ Cannabis policy and the reality • Riots and EU Demonstrations 
+  After which we will walk back to the Busstop (Carréfour de l'Europe) where we'll travel back to the ULB.
+  We expect to arrive back at ULB around 17:40.
 <div class="container-fluid">
 <div class="row-fluid">
 <div class="span6">
@@ -39,15 +78,15 @@ aliases: /sightseeing
   <tbody>
     <tr>
       <th>Saturday</th>
-      <td>Infodesk H building</td>
-      <td>Will be mailed</td>
-      <td>Will be mailed</td>
+      <td>Outside Infodesk H building</td>
+      <td>13:30</td>
+      <td>18:10</td>
     </tr>
     <tr>
       <th>Sunday</th>
-      <td>Infodesk H building</td>
-      <td>Will be mailed</td>
-      <td>Will be mailed</td>
+      <td>Outside Infodesk H building</td>
+      <td>13:30</td>
+      <td>17:40</td>
     </tr>
   </tbody>
 </table>
@@ -87,13 +126,6 @@ aliases: /sightseeing
     <img src="asset:sightseeing-gallery"/>
     <span>&copy; <a href="http://creativecommons.org/licenses/by-sa/2.0/" rel="license">CC-BY-SA-2.0</a> by <a href="https://secure.flickr.com/photos/johnkarakatsanis/4426286555/">John Karakatsanis</a></span>
 </div>
-
-<h2>Destinations</h2>
-
-<p>
-   <b>Saturday & Sunday:</b>
-   A tram ride to the centre of Brussels, followed by a guided toor on foot, going from Carre-Four De L' Europe and back to the tram 71 as well where you'll be able back to ULB campus. A representatice image of the city, with its diversity and dynamics.
-</p>
 
 <p>
   To register, or if you have any questions about the sightseeing tours, please
