--- a/content/index.html
+++ b/content/index.html
@@ -16,6 +16,13 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
       <p class="btn-news"><a href="page:practical">No registration necessary.</a></p>
     </div>
 
+    <div class="text-block">
+      <h2>Welcome to FOSDEM 2018!</h2>
+      <p><a href="page:/schedule/streaming">live feeds</a> from all the rooms.</p>
+      <p><a href="page:/schedule/amendments">Schedule Amendments</a> since the booklets went to press.</p>
+      <p><a href="https://sojourner.loomchild.net/#/tracks">Full rooms</a> show in red on the right hand side.</p>
+    </div>
+
     <div class="logo-block">
       <h3><a href="page:/about/sponsors/">SPONSORS</a></h3>
       <%
