index: mention direct talk links and feedback

--- a/content/index.html
+++ b/content/index.html
@@ -13,7 +13,7 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
 
     <div class="text-block">
       <h2>Welcome to FOSDEM 2018!</h2>
-      <p><a href="page:/schedule/streaming">Live feeds</a> from all the rooms.</p>
+      <p><a href="page:/schedule/streaming">Live feeds</a> from all the rooms.  Individual talk pages also have direct links as well as links to feedback forms. </p>
       <p><a href="page:/schedule/amendments">Schedule Amendments</a> since the booklets went to press.</p>
       <p><a href="https://sojourner.loomchild.net/#/tracks">Full rooms</a> show in red on the right hand side.</p>
     </div>
