index: post-event update

--- a/content/index.html
+++ b/content/index.html
@@ -12,10 +12,24 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
   <div class="s-block">
 
     <div class="text-block">
-      <h2>Welcome to FOSDEM 2018!</h2>
-      <p><a href="page:/schedule/streaming">Live feeds</a> from all the rooms.  Individual talk pages also have direct links as well as links to feedback forms. </p>
-      <p><a href="page:/schedule/amendments">Schedule Amendments</a> since the booklets went to press.</p>
-      <p><a href="https://sojourner.loomchild.net/#/tracks">Full rooms</a> show in red on the right hand side.</p>
+      <h2>Thank you all for a great FOSDEM 2018!</h2>
+      <p>
+      Please tell us about your FOSDEM experience at 
+      <a href="mailto:feedback@fosdem.org">feedback@fosdem.org</a>.
+      All your feedback and suggestions for next year will be greatly appreciated.
+      </p><p>
+      You may also submit feedback on individual talks by following the link at the bottom of each event page in the schedule.
+       </p>
+
+       <h2>Videos</h2>
+       <p>Many videos are already available this year!  
+	You'll find them on the web pages for the individual talks when they are ready,
+	or download them from <a href="https://videos.fosdem.org/2018/">videos.fosdem.org</a> or view our
+	 <a href="https://www.youtube.com/user/fosdemtalks">YouTube channel</a>.
+	<a href="https://review.video.fosdem.org/overview">Processing status.</a>
+       </p>
+
+
     </div>
 
     <div class="text-block">
