--- a/content/index.html
+++ b/content/index.html
@@ -12,27 +12,6 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
   <div class="s-block">
 
     <div class="text-block">
-      <h2>Thank you all for a great FOSDEM 2018!</h2>
-      <p>
-      Please tell us about your FOSDEM experience at 
-      <a href="mailto:feedback@fosdem.org">feedback@fosdem.org</a>.
-      All your feedback and suggestions for next year will be greatly appreciated.
-      </p><p>
-      You may also submit feedback on individual talks by following the link at the bottom of each event page in the schedule.
-       </p>
-
-       <h2>Videos</h2>
-       <p>Many videos are already available this year!  
-	You'll find them on the web pages for the individual talks when they are ready,
-	or download them from <a href="https://videos.fosdem.org/2018/">videos.fosdem.org</a> or view our
-	 <a href="https://www.youtube.com/user/fosdemtalks">YouTube channel</a>.
-	<a href="https://review.video.fosdem.org/overview">Processing status.</a>
-       </p>
-
-
-    </div>
-
-    <div class="text-block">
       <h2>FOSDEM is a free event for software developers to meet, share ideas and collaborate.</h2>
       <p>Every year, thousands of developers of free and open source software from all over the world gather at the event in Brussels.</p>
       <p class="btn-news"><a href="page:practical">No registration necessary.</a></p>
@@ -57,14 +36,31 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
       <% end %>
     </div>
 
-    <div style="height: 200px;">&nbsp;</div>
-
     <%
     # Depending on the height of the sponsors graphic, general announcements
     # (distinct from "news" by virtue of being undated) should either go here
     # in an "announcement-block" div or be a "news-block" div below the
     # "s-block" div. pph 20141210
     %>
+    <div class="announcment-block">
+      <h2>Thank you all for a great FOSDEM 2018!</h2>
+      <p>
+      Please tell us about your FOSDEM experience at 
+      <a href="mailto:feedback@fosdem.org">feedback@fosdem.org</a>.
+      All your feedback and suggestions for next year will be greatly appreciated.
+      </p><p>
+      You may also submit feedback on individual talks by following the link at the bottom of each event page in the schedule.
+       </p>
+
+       <h2>Videos</h2>
+       <p>Many videos are already available this year!  
+	You'll find them on the web pages for the individual talks when they are ready,
+	or download them from <a href="https://videos.fosdem.org/2018/">videos.fosdem.org</a> or view our
+	 <a href="https://www.youtube.com/user/fosdemtalks">YouTube channel</a>.
+	<a href="https://review.video.fosdem.org/overview">Processing status.</a>
+       </p>
+
+    </div>
 
   <div class="news-block">
     <h2>NEWS</h2>
