Our conference is called "FOSDEM".

--- a/content/sightseeing.html
+++ b/content/sightseeing.html
@@ -25,9 +25,9 @@ aliases: /sightseeing
 <p>
   The meeting point is next to the infodesk in front of the H building, and the tours end here as well.
   For both tours, Saturday and Sunday you have to register in front providing phonenumber and e-mail.
-  Send an e-mail to Tours@FOSDEM.org providing name, e-mail and phonenumber and await a confirmation.
+  Send an e-mail to tour@fosdem.org providing name, e-mail and phonenumber and await a confirmation.
   We need this information for emergencies and won't use it or store it for any other purpose.
-  It will be deleted after Fosdem ends.
+  It will be deleted after FOSDEM ends.
 </p>
 
 <p> 
@@ -114,7 +114,7 @@ aliases: /sightseeing
 <p>
   Participation is free but places are limited <30, and you <b>must register</b> beforehand.
   Please send an e-mail to
-  <a href="mailto:tour@fosdem.org">tour@fosdem.org</a> with an e-mail and phonenumber where you are reachable during Fosdem to register for these
+  <a href="mailto:tour@fosdem.org">tour@fosdem.org</a> with an e-mail and phonenumber where you are reachable during FOSDEM to register for these
   tours, and specify if you are willing to join the tour on Saturday, Sunday, or both.
 </p>
 
