--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -124,21 +124,21 @@ bars in the neighbourhood where you can pass the time!</p>
 <a name="parking"></a><h3>By car: parking</h3>
 <p>
 If you come to FOSDEM by car, you can park your car on the campus.
-The main parking is located between Janson and the K building.
+The <strong>main parking</strong> is located between Janson and the K building.
 See the map on this page for the exact location.
 The entrance to the parking is on Av. Franklin Roosevelt next to the H building.
 Note: There is <strong>no entrance</strong> from Av. Adolphe Buyl.
 </p>
 <p>
-An <strong>additional parking</strong> is available next to the U
-building at Av. Antoine Depage. Note that this is a one-way street,
-only accessible from Av. Franklin Roosevelt as well.
+An <strong>additional parking</strong> on the campus is available next
+to the U building at Av. Antoine Depage. Note that this is a one-way
+street, only accessible from Av. Franklin Roosevelt as well.
 </p>
+<img style="float: right; text-align: right" src="asset:bluezone" alt="Traffic sign: blue zone" title="Traffic sign: blue zone"}/>
 <p>
 You can park on the campus at your own risk.
 Do not leave any valuables in your car!
 </p>
-
 <p>
 The parkings of the campus can be very busy since early morning
 during both days. An alternative is to leave your car in the
@@ -147,6 +147,16 @@ Parking Sablon-Poelaert</a>, from there to take the
 <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;moduscode=T&amp;linecode=94">tram 94</a>, 
 direction Mus&eacute;e du Tram.
 Then follow the <a href="#bus">instructions above</a>.
+</p>
+<p>
+Be aware that most streets directly surrounding the ULB campus are in a
+so-called 'blue zone'. Parking in the blue zone is free, but limited to
+a maximum of two hours on Monday - Saturday. Use of a parking disc
+displaying the arrival time is mandatory here. The picture on the right
+shows one of the signs that may be used to indicate this blue zone.
+These signs are placed on the zone edges, so not repeated on every
+street inside the zone. Other nearby streets are in paid parking zones:
+check where you park your car.
 </p>
 
 
