index: s/videos.f.o/video.f.o/

--- a/content/index.html
+++ b/content/index.html
@@ -55,7 +55,7 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
        <h2>Videos</h2>
        <p>Many videos are already available this year!  
 	You'll find them on the web pages for the individual talks when they are ready,
-	or download them from <a href="https://videos.fosdem.org/2018/">videos.fosdem.org</a> or view our
+	or download them from <a href="https://video.fosdem.org/2018/">video.fosdem.org</a> or view our
 	 <a href="https://www.youtube.com/user/fosdemtalks">YouTube channel</a>.
 	<a href="https://review.video.fosdem.org/overview">Processing status.</a>
        </p>
