Fix invalid HTML entity in sightseeing page

--- a/content/sightseeing.html
+++ b/content/sightseeing.html
@@ -112,7 +112,7 @@ aliases: /sightseeing
 </p>
 
 <p>
-  Participation is free but places are limited <30, and you <b>must register</b> beforehand.
+  Participation is free but places are limited &lt;30, and you <b>must register</b> beforehand.
   Please send an e-mail to
   <a href="mailto:tour@fosdem.org">tour@fosdem.org</a> with an e-mail and phonenumber where you are reachable during Fosdem to register for these
   tours, and specify if you are willing to join the tour on Saturday, Sunday, or both.
