--- a/content/stands.html
+++ b/content/stands.html
@@ -130,12 +130,12 @@ give away goodies and so forth, and to present themselves to the visitors
 in a more personal fashion.
 </p>
 <p>
-The following stands will be present at FOSDEM 2018.
+The following stands will be present at <%= conference()[:title] %>.
 <%
 =begin
 %>
 <span class="label label-info">
-The list of accepted stands for FOSDEM 2018 has not yet been published!
+The list of accepted stands for <%= conference()[:title] %> has not yet been published!
 </span>
 </p>
 <p>
