--- a/content/schedule/devrooms/hpc,_big_data_and_data_science.html
+++ b/content/schedule/devrooms/hpc,_big_data_and_data_science.html
@@ -12,8 +12,8 @@ scalability.</p>
 
 <p>Free and Open Source communities have been the foundation of the HPC
 and Big Data communities for some time. In the HPC community, it should
-be no surprise that 488 of the Top500 supercomputers in the world run
-Linux. On the Big Data side, the Hadoop ecosystem has had a tremendous
+be no surprise that currentl 100% of the Top500 supercomputers in the world run
+(some variant of) Linux. On the Big Data side, the Hadoop ecosystem has had a tremendous
 amount of Open Source contributions from a wide range of organizations
 coming together under the Apache Software Foundation.</p>
 
