devrooms: update ada. add decentralized int

--- a/content/schedule/devrooms/ada.html
+++ b/content/schedule/devrooms/ada.html
@@ -5,24 +5,24 @@ extensively in air traffic control, rail transportation, aerospace,
 nuclear, financial services, medical devices, etc.  It is also
 perfectly suited for open source development.
 </p>
-
 <p>
 Awareness of safety and security issues in software systems is
-increasing.  Multi-core platforms are now abundant.  These are some
-of the reasons that the Ada programming language and technology
-attracts more and more attention, among others due to Ada's support
-for programming by contract and for multi-core targets.
-The Ada 2012 language definition was approved and published by ISO in
-December 2012, updated early 2016, and work on new features for the
-next revision is ongoing.  As with the prior Ada 1995 and Ada 2005
-standards, the first full implementation of the Ada 2012 standard
-was made available in gcc - the GNU Compiler Collection (GNAT).
-More and more tools are available, many are open source, including
-for small and recent platforms.  Interest keeps increasing, also in
-the open source community, and many exciting projects started.
+increasing.  Multi-core platforms are now abundant.  These are
+some of the reasons that the Ada programming language and technology
+attracts more and more attention, among others due to Ada's support for
+programming by contract and for multi-core targets.  The latest Ada
+language definition was updated early 2016.  Work on new features is
+ongoing, such as improved support for fine-grained parallelism, and
+will result in a new Ada standard scheduled for 2020.  Ada-related
+technology such as SPARK provides a solution for the safety and
+security aspects stated above.
 </p>
-
 <p>
+More and more tools are available, many are open source, including
+for small and recent platforms.  Interest in Ada keeps increasing,
+also in the open source community, and many exciting projects have
+been started.
+</p><p>
 The Ada DevRoom aims to present the facilities offered by the
 Ada language (such as for object-oriented, multicore, or embedded
 programming) as well as some of the many exciting tools and projects
