Minor wording improvement

--- a/content/schedule/devrooms/search.html
+++ b/content/schedule/devrooms/search.html
@@ -8,7 +8,7 @@ Full-text search is everywhere and it is also back at FOSDEM this year.
 <li>What are current improvements and issues in popular search engines such as Elasticsearch and Solr?</li>
 <li>What is the role of machine learning in search and how do you even measure search quality?</li>
 <li>Which new systems are entering the search market?</li>
-<li>What is the place of client-side search tools like Fuse.js, Js Search, Lunr, and Elasticlunr.js or are they just toys?</li>
+<li>What is the place of client-side search tools like Fuse.js, Js Search, Lunr, and Elasticlunr.js?</li>
 <li>Are there any new break throughs or is BM25 good (enough)?</li>
 </ul>
 </p>
